--- a/app/facebook/facebook.html
+++ b/app/facebook/facebook.html
@@ -1,56 +1,53 @@
-<div class="row" ng-controller="8">
-      <div class="col-md-4">
-        <h4>{{welcomeMsg}}</h4>
-        <div ng-if="isLoggedIn == true">
-          <a href="{{userInfo.link}}" target="_blank"><img ng-src="{{picture}}"></a>
+<div class="row">
+  <div class="col-md-4">
+    <h4>{{userData.welcomeMsg}}</h4>
+    <div ng-show="isLoggedIn">
+      <a href="{{userData.userInfo.link}}" target="_blank"><img ng-src="{{userData.picture}}"></a>
+    </div>
+    <br>
+    <br><br>
+    <div ng-show="isLoggedIn" class="well">
+      <h4>User Info</h4>
+      <ul>
+        <li>ID: {{userData.userInfo._id}}</li>
+        <li>First Name: {{userData.userInfo.first_name}}</li>
+        <li>Last Name: {{userData.userInfo.last_name}}</li>
+        <li>Email: {{userData.userInfo.email}}</li>
+        <li>Gender: {{userData.userInfo.gender}}</li>
+        <li>Locale: {{userData.userInfo.locale}}</li>
+      </ul>
+    </div>
+    <br>
+    <div class="well" ng-show="isLoggedIn">
+      <h4>Permissions</h4>
+      <ul>
+        <li ng-repeat="permission in permissions">{{permission.permission}} - {{permission.status}}</li>
+      </ul>
+    </div>
+  </div>
+  <div class="col-md-8">
+    <h3>Welcome to Facebook!</h3>
+    <div ng-show="isLoggedIn">
+      <form ng-submit="postStatus()">
+        <div class="form-group">
+          <label>Status Update</label>
+          <textarea ng-model="body" class="form-control"></textarea>
         </div>
-        <br>
-        <div ng-if="isLoggedIn == true">
-          <button type="button" class="btn btn-default" ng-click="logout()">Logout</button>
-        </div>
-        <br><br>
-        <div ng-if="isLoggedIn == true" class="well">
-          <h4>User Info</h4>
-          <ul>
-            <li>ID: {{userInfo.id}}</li>
-            <li>First Name: {{userInfo.first_name}}</li>
-            <li>Last Name: {{userInfo.last_name}}</li>
-            <li>Email: {{userInfo.email}}</li>
-            <li>Gender: {{userInfo.gender}}</li>
-            <li>Locale: {{userInfo.locale}}</li>
-          </ul>
-        </div>
-        <br>
-        <div class="well" ng-if="isLoggedIn == true">
-          <h4>Permissions</h4>
-          <ul>
-            <li ng-repeat="permission in permissions">{{permission.permission}} - {{permission.status}}</li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-md-8">
-        <h3>Welcome to Facebook!</h3>
-        <div ng-if="isLoggedIn == true">
-          <form ng-submit="postStatus()">
-            <div class="form-group">
-              <label>Status Update</label>
-              <textarea ng-model="body" class="form-control"></textarea>
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
-          <br><br>
-          <div ng-repeat="post in posts" class="stbody">
-            <div class="stimg"> 
-                  <img ng-src="{{picture}}">
-              </div> 
-              <div class="sttext"> 
-                  {{post.message}}
-              <div class="sttime">{{post.updated_time}}</div> 
-              </div> 
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <br><br>
+      <div ng-repeat="post in userData.posts" class="stbody">
+        <div class="stimg" style="background-image: url({{userData.picture}});background-repeat: no-repeat;background-size: contain;">
+              <!--<img ng-src="{{userData.picture}}">-->
           </div>
-        </div>
-        <div ng-if="isLoggedIn == false">
-          <p>You need to login to post</p>
-        </div>
+          <div class="sttext">
+              {{post.post_content}}
+          <div class="sttime">{{post.updated_time}}</div>
+          </div>
       </div>
     </div>
+    <div ng-show="isLoggedIn == false">
+      <p>You need to login to post</p>
+    </div>
+  </div>
+</div>
