--- a/app/index.html
+++ b/app/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="ngSocial" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="ngSocial" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="ngSocial" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="ngSocial" class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>ngSocial App</title>
+  <title>Facebook</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="app.css">
 </head>
-<body ng-controller="FacebookCtrl">
-  <nav class="navbar navbar-inverse">
+<body ng-app="ngSocial">
+    <nav class="navbar navbar-inverse" ng-controller="LoginCtrl">
       <div class="col-sm-6 col-md-6 container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -25,26 +21,24 @@
           <a class="navbar-brand" href="#">Facebook</a>
         </div>
       </div>
-       <div class="col-sm-6 col-md-6 pull-right">
+      <div class="col-sm-6 col-md-6 pull-right" ng-show="isLoggedIn == false">
           <form class="navbar-form pull-right">
               <input type="text" class="form-control" placeholder="Username" ng-model="username" id="username">
               <input type="password" class="form-control" placeholder="Password" ng-model="password" id="password">
-              <button class="btn btn-success" type="submit" ng-click="login()">Login</button>
+              <button class="btn btn-success" type="button" ng-click="login()">Login</button>
           </form>
-        </div>
+      </div>
+      <div class="col-sm-6 col-md-6 pull-right" ng-show="isLoggedIn">
+          <form class="navbar-form pull-right">
+              <button type="button" class="btn btn-default btn-sm pull-right" ng-click="logout()">
+                  <span class="glyphicon glyphicon-log-out"></span> Logout
+              </button>
+          </form>
+      </div>
     </nav>
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-
-  <div class="container">
-    <div ng-view></div>
-  </div>
-
-
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
+    <div class="container">
+        <div ng-view></div>
+    </div>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
